# stock-sentinel

./: .env.example  .gitignore  ??????.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  新手操作指南.md
.github/workflows/: ci.yml  intraday.yml  monitor.yml  pages.yml
config/: settings.json
data/: alerts.json  backtests.json  dashboard.json  intraday.json  state.json
docs/: ??ETF?????.md  国内ETF监测池说明.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: manifest.webmanifest  service-worker.js
frontend/public/data/: alerts.json  backtests.json  dashboard.json  intraday.json
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts  utils.test.ts  utils.ts
frontend/src/components/: Charts.tsx  Common.tsx
frontend/src/pages/: Alerts.tsx  Detail.tsx  Overview.tsx  Settings.tsx  Simulator.tsx  Watchlist.tsx
scripts/: run-demo.ps1  run-frontend.ps1  setup.ps1
src/stock_sentinel/: __init__.py  alerts.py  analysis.py  backtest.py  cli.py  config.py  indicators.py  intraday.py  logging_config.py  market_hours.py  models.py  notifier.py  scoring.py  service.py  storage.py
src/stock_sentinel/providers/: __init__.py  akshare_intraday.py  alpha_vantage.py  base.py  common.py  factory.py  sample.py  twelve_data.py  yfinance_source.py
tests/: conftest.py  test_alerts.py  test_alpha_vantage.py  test_analysis.py  test_backtest.py  test_config.py  test_indicators.py  test_intraday.py  test_market_hours.py
