[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-sentinel"
version = "1.0.0"
description = "A conservative stock market monitor, rule-based signal scorer and PWA dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Stock Sentinel contributors"}]
dependencies = [
  "httpx>=0.27,<1",
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "python-dotenv>=1.0,<2",
  "tenacity>=8.2,<10",
]

[project.optional-dependencies]
yfinance = ["yfinance>=0.2.54,<2"]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
stock-sentinel = "stock_sentinel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
